<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcAut_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="Button to back"
        android:background="?attr/selectableItemBackgroundBorderless"
        />
    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        >
        <EditText
            android:id="@+id/ed_preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_preco"
            android:layout_marginBottom="4dp"
            android:inputType="numberDecimal"
            android:maxLength="10"
            />
        <EditText
            android:id="@+id/ed_km_percorrido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_km_percorrido"
            android:layout_marginBottom="4dp"
            android:inputType="numberDecimal"
            android:maxLength="10"
            />
        <Button
            android:id="@+id/btn_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_button"/>
        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>