<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/eletriccar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:id="@+id/ll_card_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car">
                <LinearLayout
                    android:id="@+id/ll_line_marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_car">

                    <TextView
                        android:id="@+id/tv_title_marca"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_marca" />

                    <TextView
                        android:id="@+id/tv_value_marca"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="Marca do Carro" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_line_modelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_line_marca">

                    <TextView
                        android:id="@+id/tv_title_modelo"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_modelo" />

                    <TextView
                        android:id="@+id/tv_value_modelo"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="Modelo do carro" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_line_preco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_car">

                    <TextView
                        android:id="@+id/tv_title_preco"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_preco" />

                    <TextView
                        android:id="@+id/tv_value_preco"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="R$ 120.000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_line_bateria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title_bateria"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_bateria" />

                    <TextView
                        android:id="@+id/tv_value_bateria"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="93,4 kWg" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_line_potencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title_potencia"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_potencia" />

                    <TextView
                        android:id="@+id/tv_value_potencia"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="646 cv" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_line_recarga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title_recarga"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/card_recarga" />

                    <TextView
                        android:id="@+id/tv_value_recarga"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:text="23 min" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>